# vala_practise

./: .gitignore  README.md  addFile.py  gi1.vala  glade1.glade  glade1.vala  hello1.vala  hello2.vala  makefile  meson.build  readfile1.vala  webkit1.vala
